...
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="copy">Copy</string>
    <string name="copied">Text copied</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://bogomolovaa.github.io/Anochat/</string>



</resources>

