<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph.xml"
        app:startDestination="@id/conversationsListFragment">

    <fragment
        android:id="@+id/conversationsListFragment"
        android:name="bogomolov.aa.anochat.features.conversations.list.ConversationListFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_conversationsListFragment_to_conversationFragment"
            app:destination="@id/dialog_graph" />
        <action
            android:id="@+id/action_conversationsListFragment_to_usersFragment"
            app:destination="@id/usersFragment" />
        <action
            android:id="@+id/action_conversationsListFragment_to_settingsFragment"
            app:destination="@id/settings_graph" />
    </fragment>
    <fragment
            android:id="@+id/usersFragment"
            android:name="bogomolov.aa.anochat.features.contacts.list.UsersFragment"
            android:label="@string/contacts" />
    <fragment
            android:id="@+id/signInFragment"
            android:name="bogomolov.aa.anochat.features.login.SignInFragment"
            android:label="@string/sign_in">
        <action
                android:id="@+id/action_signInFragment_to_conversationsListFragment"
                app:destination="@id/conversationsListFragment"
                app:popUpTo="@+id/signInFragment"
                app:popUpToInclusive="true" />
    </fragment>
    <fragment
            android:id="@+id/imageViewFragment"
            android:name="bogomolov.aa.anochat.features.shared.ImageViewFragment" />
    <fragment
            android:id="@+id/userViewFragment"
            android:name="bogomolov.aa.anochat.features.contacts.user.UserViewFragment" />

    <navigation android:id="@+id/settings_graph"
        app:startDestination="@id/settingsFragment">
        <fragment
                android:id="@+id/settingsFragment"
                android:name="bogomolov.aa.anochat.features.settings.SettingsFragment"
                android:label="@string/settings">
            <action
                    android:id="@+id/action_settingsFragment_to_miniatureFragment"
                    app:destination="@id/miniatureFragment" />
        </fragment>
        <fragment
            android:id="@+id/miniatureFragment"
            android:name="bogomolov.aa.anochat.features.settings.MiniatureFragment"
            android:label="@string/set_avatar" />
    </navigation>
    <navigation android:id="@+id/dialog_graph"
        app:startDestination="@id/conversationFragment">
        <fragment
            android:id="@+id/conversationFragment"
            android:name="bogomolov.aa.anochat.features.conversations.dialog.ConversationFragment">
            <action
                android:id="@+id/action_conversationFragment_to_sendMediaFragment"
                app:destination="@id/sendMediaFragment" />
        </fragment>
        <fragment
            android:id="@+id/sendMediaFragment"
            android:name="bogomolov.aa.anochat.features.conversations.dialog.SendMediaFragment" />
    </navigation>
    <fragment
        android:id="@+id/exoPlayerViewFragment"
        android:name="bogomolov.aa.anochat.features.shared.ExoPlayerViewFragment" />
</navigation>