<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/search_icon"
            android:title="@string/search"
            app:showAsAction="always"/>
</menu>